<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />
    
    <!--  
    <TextView
        android:id="@+id/textURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/url"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />
    -->
      <!--  
    <TextView
        android:id="@+id/textWeibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/weibo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />
       -->
    <TextView
        android:id="@+id/textWeiboURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weiboURL"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />
        
    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />
    
    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnAboutOK"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    

</LinearLayout>