<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >	    
        <TextView
            android:id="@+id/textCopyTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copying"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
	    android:id="@+id/textCopyFile"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceSmall"
	    android:textColor="#000000" />
	</LinearLayout>
	
    <RelativeLayout android:id="@+id/progressview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/textProgressUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ProgressUnit"
            android:layout_toRightOf="@+id/textProgress"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/textSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textSpeedUnit"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/textSpeedUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speedUnit"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />
	</RelativeLayout>
    
    
	<ProgressBar   
        android:id="@+id/content_view_progress"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"  
        style="@android:style/Widget.ProgressBar.Horizontal"  
        android:max="100"   
        android:layout_marginTop="4dp"  
        />

	
    
</LinearLayout>